# embedded-playground

./: .gitignore
401test/: .cproject  .mxproject  .project  401test Debug.launch  401test Release.launch  401test.ioc
LAB_13/: .cproject  .project  LAB_13 Debug.launch  LAB_13.ioc
LAB_14/: .cproject  .project  LAB_14.ioc  LAB_14.launch
VFD_TEST_F0/: .cproject  .mxproject  .project  VFD_TEST_F0.ioc
adc_test/: .cproject  .mxproject  adc_test Debug.launch  adc_test.ioc
bt_esp_hal_only/: bt_esp_hal_only.ino  bt_seq.txt
button_test/: .cproject  button_test Debug.launch  button_test Release.launch  button_test.ioc
dma_test/: .cproject  .mxproject  dma_test Debug.launch  dma_test Release.launch  dma_test.ioc
esp32/: .gitignore
fft_bench/: fast_ln.c  fft_hamming_1024.h  fft_twiddles_2048.h  wave_data_int16_4096.h
freq_cnt/: .cproject  .project  freq_cnt Debug.launch  freq_cnt Release.launch  freq_cnt.ioc
fv935nd_f0_test/: .cproject  .mxproject  .project  fv935nd_f0_test.ioc
i2c_display/: .cproject  .project  i2c_display Debug.launch  i2c_display.ioc
led_control/: .cproject  led_control Debug.launch  led_control Release.launch  led_control.ioc
linux/ch341a_spi_max7219/: CMakeLists.txt  main.c
my-project-adc/: CMakeLists.txt  test.c
my-project-pwm/: CMakeLists.txt  test.c
rtc_test/: .cproject  .mxproject  rtc_test Debug.launch  rtc_test Release.launch  rtc_test.ioc
sketch_apr19a/: sketch_apr19a.ino
sketch_apr22c/: sketch_apr22c.ino
spectrum_st/: analyzer.cpp  analyzer.hpp  app_core.cpp  app_core.hpp  led_matrix.cpp  led_matrix.hpp  spectrum.hpp  (+4 more)
(+158 files in other folders)
